--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 }
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 
+
+
 .container {
     background-color: var(--blue);
     height: 55px;
@@ -15,9 +17,6 @@
     display: flex;
     align-items:  center;
  min-width: 1024px;
-
-
- 
 }
 #flipkImg {
     height: 45px;
@@ -99,10 +98,7 @@
  #shoppingCart {
 transform: scale(1.2, 1.2);
 margin-left: 4vw;
-
-
 color: white;
-
 }
  #Carttxt {
 font-family: 'Roboto', sans-serif;
@@ -111,9 +107,7 @@ font-family: 'Roboto', sans-serif;
     font-weight: 500;
     color: white;
     margin-left: 5px;
-
     margin-right: 13vw;
- 
 }
 .backgroundPage {
 background-color: grey;
@@ -159,3 +153,86 @@ margin: 7px;
     animation-duration: 8s; 
     transition: linear;
 }
+.dealsSection {
+display: flex;
+width: 100vw;
+
+}
+.dealsNavBar {
+    height: 50px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+   background-color: aquamarine;
+}
+.deals {
+background-color: white;
+width: 80%;
+height: 255px;
+box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+display: flex;
+margin: 7px; 
+font-family: 'Roboto', sans-serif;
+}
+.refurbishedAdd  {
+width: 20%;
+height: 255px;
+box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+display: block;
+position: relative;
+overflow: hidden;
+
+
+}
+.refurishedAdd #refurbishedImg {
+   max-width: 100%;
+    max-height: 100%;
+    display: block;
+    object-fit: cover;
+    position: absolute;
+}
+
+.dealsOfTheDay {
+font-weight: bold;
+font-size: 20px;
+margin-left: 7px;
+
+}
+.clockIcon {
+    font-size: 25px;
+    margin-left: 15px;
+}
+.timeLeft {
+    color: rgb(119, 119, 119);
+    margin-left: 10px;
+}
+.viewAllButton {
+    width: 80px;
+    height: 32px;
+    background-color: #fff;
+    cursor: pointer;
+ white-space: nowrap; /*to make text of any div in one line*/ 
+   display: flex;
+   align-items: center;
+  background-color: rgb(45, 106, 240);
+    border-radius: 2px;
+    margin-left: 622px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+.viewAllButton #viewAllButtonTxt {
+  
+  color: white;
+font-size: 13px;
+
+    margin-left: 12px;
+    
+    /* have to find a way to it without margin means all center to div equallly proportionalised*/
+
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+   
+}
+
+/* .dealsNavBarDivider {
+    border-top: 3px solid #bbb;
+} */
